# Demos

./: .gitignore  settings.gradle
app/: build.gradle
blogcodes/: .gitignore  build.gradle
blogcodes/src/main/: AndroidManifest.xml
blogcodes/src/main/java/com/xdroid/blogcodes/: BaseContentActivity.java  CategoryActivity.java  MainActivity.java
blogcodes/src/main/java/com/xdroid/blogcodes/bindService/: BindServiceActivity.java  MyService.java  ScreenUtils.java
blogcodes/src/main/java/com/xdroid/blogcodes/broadcast/: PendingActivity.java  RepeatAlarmService.java
blogcodes/src/main/java/com/xdroid/blogcodes/colour_app_01/: ColourImageActivity.java  ColourImageBaseLayerView.java
blogcodes/src/main/java/com/xdroid/utils/: BitmapBase64Utils.java  L.java
blogcodes/src/main/jni/: CMakeLists.txt  hellojni.c
blogcodes/src/main/res/layout/: activity_bind_service.xml  activity_category_activity.xml  activity_colour_image.xml  activity_dl_proxy_base.xml  activity_dlactivity01.xml  activity_intent_service.xml  activity_jni01.xml  activity_large_image_view.xml  activity_left_drawer_layout.xml  activity_main_test.xml  activity_parallax_vp_test.xml  activity_pending_intent.xml  activity_perf_main.xml  activity_recyclerview.xml  activity_refresh.xml  activity_thread_handler.xml  activity_vdhblog.xml
blogcodes/src/main/res/menu/: menu_colour_image.xml  menu_dlactivity01.xml  menu_dlbase.xml  menu_intent.xml  menu_jni01.xml  menu_main_test.xml  menu_thread_handler.xml  menu_user_login.xml
blogcodes/src/main/res/values/: strings.xml
(+63 files in other folders)
